--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: egy_app
+name: aquaplus
 description: "A new Flutter project."
 publish_to: 'none'
 
@@ -17,17 +17,13 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   icons_launcher: ^2.1.7
+  flutter_launcher_icons: ^0.13.1 # Added here
 
 # Configuration for icons_launcher (generating app icons)
-icons_launcher:
+flutter_icons:
+  android: true
+  ios: true
   image_path: "assets/app_icon.png"
-  platforms:
-    android:
-      enable: true
-      adaptive_background_color: "#ffffff"
-      adaptive_foreground_image: "assets/app_icon.png"
-    ios:
-      enable: true
 
 flutter:
   uses-material-design: true
